CLI/src/Grammar/SheetMusicParser.cpp

// Generated from SheetMusic.g4 by ANTLR 4.8


#include "SheetMusicListener.h"

#include "SheetMusicParser.h"


using namespace antlrcpp;
using namespace antlr4;

SheetMusicParser::SheetMusicParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

SheetMusicParser::~SheetMusicParser() {
  delete _interpreter;
}

std::string SheetMusicParser::getGrammarFileName() const {
  return "SheetMusic.g4";
}

const std::vector<std::string>& SheetMusicParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& SheetMusicParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ScriptContext ------------------------------------------------------------------

SheetMusicParser::ScriptContext::ScriptContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SheetMusicParser::RulesSectionContext* SheetMusicParser::ScriptContext::rulesSection() {
  return getRuleContext<SheetMusicParser::RulesSectionContext>(0);
}

std::vector<SheetMusicParser::SectionDefContext *> SheetMusicParser::ScriptContext::sectionDef() {
  return getRuleContexts<SheetMusicParser::SectionDefContext>();
}

SheetMusicParser::SectionDefContext* SheetMusicParser::ScriptContext::sectionDef(size_t i) {
  return getRuleContext<SheetMusicParser::SectionDefContext>(i);
}

std::vector<SheetMusicParser::UserDefContext *> SheetMusicParser::ScriptContext::userDef() {
  return getRuleContexts<SheetMusicParser::UserDefContext>();
}

SheetMusicParser::UserDefContext* SheetMusicParser::ScriptContext::userDef(size_t i) {
  return getRuleContext<SheetMusicParser::UserDefContext>(i);
}


size_t SheetMusicParser::ScriptContext::getRuleIndex() const {
  return SheetMusicParser::RuleScript;
}

void SheetMusicParser::ScriptContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SheetMusicListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterScript(this);
}

void SheetMusicParser::ScriptContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SheetMusicListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitScript(this);
}

SheetMusicParser::ScriptContext* SheetMusicParser::script() {
  ScriptContext *_localctx = _tracker.createInstance<ScriptContext>(_ctx, getState());
  enterRule(_localctx, 0, SheetMusicParser::RuleScript);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(48);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(46);
        _errHandler->sync(this);
        switch (_input->LA(1)) {
          case SheetMusicParser::STRING: {
            setState(44);
            sectionDef();
            break;
          }

          case SheetMusicParser::T__3:
          case SheetMusicParser::T__7: {
            setState(45);
            userDef();
            break;
          }

        default:
          throw NoViableAltException(this);
        } 
      }
      setState(50);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx);
    }
    setState(51);
    rulesSection();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SectionDefContext ------------------------------------------------------------------

SheetMusicParser::SectionDefContext::SectionDefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SheetMusicParser::SectionIdentContext* SheetMusicParser::SectionDefContext::sectionIdent() {
  return getRuleContext<SheetMusicParser::SectionIdentContext>(0);
}

std::vector<tree::TerminalNode *> SheetMusicParser::SectionDefContext::NUMBER() {
  return getTokens(SheetMusicParser::NUMBER);
}

tree::TerminalNode* SheetMusicParser::SectionDefContext::NUMBER(size_t i) {
  return getToken(SheetMusicParser::NUMBER, i);
}


size_t SheetMusicParser::SectionDefContext::getRuleIndex() const {
  return SheetMusicParser::RuleSectionDef;
}

void SheetMusicParser::SectionDefContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SheetMusicListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSectionDef(this);
}

void SheetMusicParser::SectionDefContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SheetMusicListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSectionDef(this);
}

SheetMusicParser::SectionDefContext* SheetMusicParser::sectionDef() {
  SectionDefContext *_localctx = _tracker.createInstance<SectionDefContext>(_ctx, getState());
  enterRule(_localctx, 2, SheetMusicParser::RuleSectionDef);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(53);
    sectionIdent();
    setState(54);
    match(SheetMusicParser::T__0);
    setState(55);
    match(SheetMusicParser::NUMBER);
    setState(56);
    match(SheetMusicParser::T__1);
    setState(57);
    match(SheetMusicParser::NUMBER);
    setState(58);
    match(SheetMusicParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- UserDefContext ------------------------------------------------------------------

SheetMusicParser::UserDefContext::UserDefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<SheetMusicParser::ScaleDefContext *> SheetMusicParser::UserDefContext::scaleDef() {
  return getRuleContexts<SheetMusicParser::ScaleDefContext>();
}

SheetMusicParser::ScaleDefContext* SheetMusicParser::UserDefContext::scaleDef(size_t i) {
  return getRuleContext<SheetMusicParser::ScaleDefContext>(i);
}

std::vector<SheetMusicParser::ChordDefContext *> SheetMusicParser::UserDefContext::chordDef() {
  return getRuleContexts<SheetMusicParser::ChordDefContext>();
}

SheetMusicParser::ChordDefContext* SheetMusicParser::UserDefContext::chordDef(size_t i) {
  return getRuleContext<SheetMusicParser::ChordDefContext>(i);
}


size_t SheetMusicParser::UserDefContext::getRuleIndex() const {
  return SheetMusicParser::RuleUserDef;
}

void SheetMusicParser::UserDefContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SheetMusicListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterUserDef(this);
}

void SheetMusicParser::UserDefContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SheetMusicListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitUserDef(this);
}

SheetMusicParser::UserDefContext* SheetMusicParser::userDef() {
  UserDefContext *_localctx = _tracker.createInstance<UserDefContext>(_ctx, getState());
  enterRule(_localctx, 4, SheetMusicParser::RuleUserDef);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(62); 
    _errHandler->sync(this);
    alt = 1;
    do {
      switch (alt) {
        case 1: {
              setState(62);
              _errHandler->sync(this);
              switch (_input->LA(1)) {
                case SheetMusicParser::T__3: {
                  setState(60);
                  scaleDef();
                  break;
                }

                case SheetMusicParser::T__7: {
                  setState(61);
                  chordDef();
                  break;
                }

              default:
                throw NoViableAltException(this);
              }
              break;
            }

      default:
        throw NoViableAltException(this);
      }
      setState(64); 
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx);
    } while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ScaleDefContext ------------------------------------------------------------------

SheetMusicParser::ScaleDefContext::ScaleDefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SheetMusicParser::ScaleDefContext::WORD() {
  return getToken(SheetMusicParser::WORD, 0);
}

std::vector<tree::TerminalNode *> SheetMusicParser::ScaleDefContext::NUMBER() {
  return getTokens(SheetMusicParser::NUMBER);
}

tree::TerminalNode* SheetMusicParser::ScaleDefContext::NUMBER(size_t i) {
  return getToken(SheetMusicParser::NUMBER, i);
}


size_t SheetMusicParser::ScaleDefContext::getRuleIndex() const {
  return SheetMusicParser::RuleScaleDef;
}

void SheetMusicParser::ScaleDefContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SheetMusicListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterScaleDef(this);
}

void SheetMusicParser::ScaleDefContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SheetMusicListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitScaleDef(this);
}

SheetMusicParser::ScaleDefContext* SheetMusicParser::scaleDef() {
  ScaleDefContext *_localctx = _tracker.createInstance<ScaleDefContext>(_ctx, getState());
  enterRule(_localctx, 6, SheetMusicParser::RuleScaleDef);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(66);
    match(SheetMusicParser::T__3);
    setState(67);
    match(SheetMusicParser::WORD);
    setState(68);
    match(SheetMusicParser::T__4);
    setState(73);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(69);
        match(SheetMusicParser::NUMBER);
        setState(70);
        match(SheetMusicParser::T__5); 
      }
      setState(75);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx);
    }
    setState(76);
    match(SheetMusicParser::NUMBER);
    setState(77);
    match(SheetMusicParser::T__6);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ChordDefContext ------------------------------------------------------------------

SheetMusicParser::ChordDefContext::ChordDefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SheetMusicParser::ChordDefContext::WORD() {
  return getToken(SheetMusicParser::WORD, 0);
}

std::vector<SheetMusicParser::PitchContext *> SheetMusicParser::ChordDefContext::pitch() {
  return getRuleContexts<SheetMusicParser::PitchContext>();
}

SheetMusicParser::PitchContext* SheetMusicParser::ChordDefContext::pitch(size_t i) {
  return getRuleContext<SheetMusicParser::PitchContext>(i);
}


size_t SheetMusicParser::ChordDefContext::getRuleIndex() const {
  return SheetMusicParser::RuleChordDef;
}

void SheetMusicParser::ChordDefContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SheetMusicListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterChordDef(this);
}

void SheetMusicParser::ChordDefContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SheetMusicListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitChordDef(this);
}

SheetMusicParser::ChordDefContext* SheetMusicParser::chordDef() {
  ChordDefContext *_localctx = _tracker.createInstance<ChordDefContext>(_ctx, getState());
  enterRule(_localctx, 8, SheetMusicParser::RuleChordDef);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(79);
    match(SheetMusicParser::T__7);
    setState(80);
    match(SheetMusicParser::WORD);
    setState(81);
    match(SheetMusicParser::T__4);
    setState(87);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(82);
        pitch();
        setState(83);
        match(SheetMusicParser::T__5); 
      }
      setState(89);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
    }
    setState(90);
    pitch();
    setState(91);
    match(SheetMusicParser::T__6);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RulesSectionContext ------------------------------------------------------------------

SheetMusicParser::RulesSectionContext::RulesSectionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<SheetMusicParser::SectionContext *> SheetMusicParser::RulesSectionContext::section() {
  return getRuleContexts<SheetMusicParser::SectionContext>();
}

SheetMusicParser::SectionContext* SheetMusicParser::RulesSectionContext::section(size_t i) {
  return getRuleContext<SheetMusicParser::SectionContext>(i);
}


size_t SheetMusicParser::RulesSectionContext::getRuleIndex() const {
  return SheetMusicParser::RuleRulesSection;
}

void SheetMusicParser::RulesSectionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SheetMusicListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterRulesSection(this);
}

void SheetMusicParser::RulesSectionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SheetMusicListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitRulesSection(this);
}

SheetMusicParser::RulesSectionContext* SheetMusicParser::rulesSection() {
  RulesSectionContext *_localctx = _tracker.createInstance<RulesSectionContext>(_ctx, getState());
  enterRule(_localctx, 10, SheetMusicParser::RuleRulesSection);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(94); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(93);
      section();
      setState(96); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == SheetMusicParser::STRING);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SectionContext ------------------------------------------------------------------

SheetMusicParser::SectionContext::SectionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SheetMusicParser::SectionIdentContext* SheetMusicParser::SectionContext::sectionIdent() {
  return getRuleContext<SheetMusicParser::SectionIdentContext>(0);
}

std::vector<SheetMusicParser::TransitionRuleContext *> SheetMusicParser::SectionContext::transitionRule() {
  return getRuleContexts<SheetMusicParser::TransitionRuleContext>();
}

SheetMusicParser::TransitionRuleContext* SheetMusicParser::SectionContext::transitionRule(size_t i) {
  return getRuleContext<SheetMusicParser::TransitionRuleContext>(i);
}

std::vector<SheetMusicParser::InstrumentContext *> SheetMusicParser::SectionContext::instrument() {
  return getRuleContexts<SheetMusicParser::InstrumentContext>();
}

SheetMusicParser::InstrumentContext* SheetMusicParser::SectionContext::instrument(size_t i) {
  return getRuleContext<SheetMusicParser::InstrumentContext>(i);
}


size_t SheetMusicParser::SectionContext::getRuleIndex() const {
  return SheetMusicParser::RuleSection;
}

void SheetMusicParser::SectionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SheetMusicListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSection(this);
}

void SheetMusicParser::SectionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SheetMusicListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSection(this);
}

SheetMusicParser::SectionContext* SheetMusicParser::section() {
  SectionContext *_localctx = _tracker.createInstance<SectionContext>(_ctx, getState());
  enterRule(_localctx, 12, SheetMusicParser::RuleSection);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(98);
    sectionIdent();
    setState(99);
    match(SheetMusicParser::T__8);
    setState(102); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(102);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case SheetMusicParser::T__9:
        case SheetMusicParser::T__11:
        case SheetMusicParser::T__12:
        case SheetMusicParser::T__14:
        case SheetMusicParser::T__16:
        case SheetMusicParser::NUMBER:
        case SheetMusicParser::NATURAL: {
          setState(100);
          transitionRule();
          break;
        }

        case SheetMusicParser::WORD: {
          setState(101);
          instrument();
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(104); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << SheetMusicParser::T__9)
      | (1ULL << SheetMusicParser::T__11)
      | (1ULL << SheetMusicParser::T__12)
      | (1ULL << SheetMusicParser::T__14)
      | (1ULL << SheetMusicParser::T__16)
      | (1ULL << SheetMusicParser::NUMBER)
      | (1ULL << SheetMusicParser::NATURAL)
      | (1ULL << SheetMusicParser::WORD))) != 0));
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SectionIdentContext ------------------------------------------------------------------

SheetMusicParser::SectionIdentContext::SectionIdentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SheetMusicParser::SectionIdentContext::STRING() {
  return getToken(SheetMusicParser::STRING, 0);
}


size_t SheetMusicParser::SectionIdentContext::getRuleIndex() const {
  return SheetMusicParser::RuleSectionIdent;
}

void SheetMusicParser::SectionIdentContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SheetMusicListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSectionIdent(this);
}

void SheetMusicParser::SectionIdentContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SheetMusicListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSectionIdent(this);
}

SheetMusicParser::SectionIdentContext* SheetMusicParser::sectionIdent() {
  SectionIdentContext *_localctx = _tracker.createInstance<SectionIdentContext>(_ctx, getState());
  enterRule(_localctx, 14, SheetMusicParser::RuleSectionIdent);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(106);
    match(SheetMusicParser::STRING);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InstrumentContext ------------------------------------------------------------------

SheetMusicParser::InstrumentContext::InstrumentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SheetMusicParser::InstrumentContext::WORD() {
  return getToken(SheetMusicParser::WORD, 0);
}

std::vector<SheetMusicParser::TransitionRuleContext *> SheetMusicParser::InstrumentContext::transitionRule() {
  return getRuleContexts<SheetMusicParser::TransitionRuleContext>();
}

SheetMusicParser::TransitionRuleContext* SheetMusicParser::InstrumentContext::transitionRule(size_t i) {
  return getRuleContext<SheetMusicParser::TransitionRuleContext>(i);
}


size_t SheetMusicParser::InstrumentContext::getRuleIndex() const {
  return SheetMusicParser::RuleInstrument;
}

void SheetMusicParser::InstrumentContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SheetMusicListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterInstrument(this);
}

void SheetMusicParser::InstrumentContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SheetMusicListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitInstrument(this);
}

SheetMusicParser::InstrumentContext* SheetMusicParser::instrument() {
  InstrumentContext *_localctx = _tracker.createInstance<InstrumentContext>(_ctx, getState());
  enterRule(_localctx, 16, SheetMusicParser::RuleInstrument);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(108);
    match(SheetMusicParser::WORD);
    setState(109);
    match(SheetMusicParser::T__4);
    setState(111); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(110);
      transitionRule();
      setState(113); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << SheetMusicParser::T__9)
      | (1ULL << SheetMusicParser::T__11)
      | (1ULL << SheetMusicParser::T__12)
      | (1ULL << SheetMusicParser::T__14)
      | (1ULL << SheetMusicParser::T__16)
      | (1ULL << SheetMusicParser::NUMBER)
      | (1ULL << SheetMusicParser::NATURAL))) != 0));
    setState(115);
    match(SheetMusicParser::T__6);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TransitionRuleContext ------------------------------------------------------------------

SheetMusicParser::TransitionRuleContext::TransitionRuleContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SheetMusicParser::ScaleRuleContext* SheetMusicParser::TransitionRuleContext::scaleRule() {
  return getRuleContext<SheetMusicParser::ScaleRuleContext>(0);
}

SheetMusicParser::OccurrenceRuleContext* SheetMusicParser::TransitionRuleContext::occurrenceRule() {
  return getRuleContext<SheetMusicParser::OccurrenceRuleContext>(0);
}

SheetMusicParser::SequenceRuleContext* SheetMusicParser::TransitionRuleContext::sequenceRule() {
  return getRuleContext<SheetMusicParser::SequenceRuleContext>(0);
}

SheetMusicParser::FlagsContext* SheetMusicParser::TransitionRuleContext::flags() {
  return getRuleContext<SheetMusicParser::FlagsContext>(0);
}


size_t SheetMusicParser::TransitionRuleContext::getRuleIndex() const {
  return SheetMusicParser::RuleTransitionRule;
}

void SheetMusicParser::TransitionRuleContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SheetMusicListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTransitionRule(this);
}

void SheetMusicParser::TransitionRuleContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SheetMusicListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTransitionRule(this);
}

SheetMusicParser::TransitionRuleContext* SheetMusicParser::transitionRule() {
  TransitionRuleContext *_localctx = _tracker.createInstance<TransitionRuleContext>(_ctx, getState());
  enterRule(_localctx, 18, SheetMusicParser::RuleTransitionRule);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(121);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case SheetMusicParser::T__9: {
        enterOuterAlt(_localctx, 1);
        setState(117);
        scaleRule();
        break;
      }

      case SheetMusicParser::T__11: {
        enterOuterAlt(_localctx, 2);
        setState(118);
        occurrenceRule();
        break;
      }

      case SheetMusicParser::T__12:
      case SheetMusicParser::T__14:
      case SheetMusicParser::NUMBER:
      case SheetMusicParser::NATURAL: {
        enterOuterAlt(_localctx, 3);
        setState(119);
        sequenceRule();
        break;
      }

      case SheetMusicParser::T__16: {
        enterOuterAlt(_localctx, 4);
        setState(120);
        flags();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ScaleRuleContext ------------------------------------------------------------------

SheetMusicParser::ScaleRuleContext::ScaleRuleContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<SheetMusicParser::ScaleContext *> SheetMusicParser::ScaleRuleContext::scale() {
  return getRuleContexts<SheetMusicParser::ScaleContext>();
}

SheetMusicParser::ScaleContext* SheetMusicParser::ScaleRuleContext::scale(size_t i) {
  return getRuleContext<SheetMusicParser::ScaleContext>(i);
}


size_t SheetMusicParser::ScaleRuleContext::getRuleIndex() const {
  return SheetMusicParser::RuleScaleRule;
}

void SheetMusicParser::ScaleRuleContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SheetMusicListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterScaleRule(this);
}

void SheetMusicParser::ScaleRuleContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SheetMusicListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitScaleRule(this);
}

SheetMusicParser::ScaleRuleContext* SheetMusicParser::scaleRule() {
  ScaleRuleContext *_localctx = _tracker.createInstance<ScaleRuleContext>(_ctx, getState());
  enterRule(_localctx, 20, SheetMusicParser::RuleScaleRule);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(133);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 11, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(123);
      match(SheetMusicParser::T__9);
      setState(124);
      scale();
      setState(125);
      match(SheetMusicParser::T__10);
      setState(126);
      scale();
      setState(127);
      match(SheetMusicParser::T__5);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(129);
      match(SheetMusicParser::T__9);
      setState(130);
      scale();
      setState(131);
      match(SheetMusicParser::T__5);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ScaleContext ------------------------------------------------------------------

SheetMusicParser::ScaleContext::ScaleContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SheetMusicParser::PitchContext* SheetMusicParser::ScaleContext::pitch() {
  return getRuleContext<SheetMusicParser::PitchContext>(0);
}

tree::TerminalNode* SheetMusicParser::ScaleContext::WORD() {
  return getToken(SheetMusicParser::WORD, 0);
}


size_t SheetMusicParser::ScaleContext::getRuleIndex() const {
  return SheetMusicParser::RuleScale;
}

void SheetMusicParser::ScaleContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SheetMusicListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterScale(this);
}

void SheetMusicParser::ScaleContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SheetMusicListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitScale(this);
}

SheetMusicParser::ScaleContext* SheetMusicParser::scale() {
  ScaleContext *_localctx = _tracker.createInstance<ScaleContext>(_ctx, getState());
  enterRule(_localctx, 22, SheetMusicParser::RuleScale);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(135);
    pitch();
    setState(136);
    match(SheetMusicParser::WORD);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- OccurrenceRuleContext ------------------------------------------------------------------

SheetMusicParser::OccurrenceRuleContext::OccurrenceRuleContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SheetMusicParser::OccurrenceRuleContext::NUMBER() {
  return getToken(SheetMusicParser::NUMBER, 0);
}

SheetMusicParser::SequenceRuleContext* SheetMusicParser::OccurrenceRuleContext::sequenceRule() {
  return getRuleContext<SheetMusicParser::SequenceRuleContext>(0);
}

